--- a/index.html
+++ b/index.html
@@ -9,88 +9,102 @@
 </head>
 
 <body>
+    <header>
+        <h1>HTML Tutorial</h1>
+        <hr>
+    </header>
 
-    <h1>HTML Tutorial</h1>
-    <hr>
+    <main>
+        <h2>What is HTML?</h2>
 
-    <h2>What is HTML?</h2>
+        <p>
+            <b>Hypertext Markup Language (<abbr title="Hypertext Markup Language">HTML</abbr>)</b> is the
+            standard markup language for creating web pages and web applications.
+        </p>
 
-    <p>
-        <span><b>Hypertext Markup Language (<abbr title="Hypertext Markup Language">HTML</abbr>)</b></span> is the
-        standard markup language for creating web pages and web applications.
-    </p>
+        <p>
+            Web browsers receive <abbr title="Hypertext Markup Language">HTML</abbr> documents from a web server or from
+            local storage and render the documents into multimedia web pages. <abbr
+                title="Hypertext Markup Language">HTML</abbr> describes the structure of a web
+            page semantically and originally included cues for the appearance of the document.</p>
 
-    <p>
-        Web browsers receive <abbr title="Hypertext Markup Language">HTML</abbr> documents from a web server or from
-        local storage and render the documents into multimedia web pages. <abbr
-            title="Hypertext Markup Language">HTML</abbr> describes the structure of a web
-        page semantically and originally included cues for the appearance of the document.</p>
+        <p>
+            <abbr title="Hypertext Markup Language">HTML</abbr> elements are the building blocks of <abbr
+                title="Hypertext Markup Language">HTML</abbr> pages. With <abbr
+                title="Hypertext Markup Language">HTML</abbr> constructs, images and other objects such as interactive
+            forms
+            may be embedded into the rendered page. <abbr title="Hypertext Markup Language">HTML</abbr>
+            provides a means to create structured documents by denoting structural semantics for text such as headings,
+            paragraphs, lists, links, quotes and other items. <abbr title="Hypertext Markup Language">HTML</abbr>
+            elements
+            are delineated by <dfn>tags</dfn>, written using angle
+            brackets. Tags such as <code>&ltimg /&gt</code> and <code>&ltinput /&gt</code> directly
+            introduce content into the page. Other tags such as <code>&ltp&gt</code> surround and provide
+            information about document text and may include other tags as sub-elements. Browsers do not display the
+            <abbr title="Hypertext Markup Language">HTML</abbr> tags, but use them to interpret the content of
+            the page.
+        </p>
 
-    <p>
-        <abbr title="Hypertext Markup Language">HTML</abbr> elements are the building blocks of <abbr
-            title="Hypertext Markup Language">HTML</abbr> pages. With <abbr
-            title="Hypertext Markup Language">HTML</abbr> constructs, images and other objects such as interactive forms
-        may be embedded into the rendered page. <abbr title="Hypertext Markup Language">HTML</abbr>
-        provides a means to create structured documents by denoting structural semantics for text such as headings,
-        paragraphs, lists, links, quotes and other items. <abbr title="Hypertext Markup Language">HTML</abbr> elements
-        are delineated by <dfn>tags</dfn>, written using angle
-        brackets. Tags such as <code>&ltimg /&gt</code> and <code>&ltinput /&gt</code> directly
-        introduce content into the page. Other tags such as <code>&ltp&gt</code> surround and provide
-        information about document text and may include other tags as sub-elements. Browsers do not display the <abbr
-            title="Hypertext Markup Language">HTML</abbr> tags, but use them to interpret the content of
-        the page.
-    </p>
+        <hr>
 
-    <hr>
+        <h2>Markup</h2>
 
-    <h2>Markup</h2>
+        <p>
+            <abbr title="Hypertext Markup Language">HTML</abbr> markup consists of several key components, including
+            those
+            called <dfn>tags</dfn> (and their <dfn>attributes</dfn>),
+            character-based <dfn>data types</dfn>, <dfn>character references</dfn> and <dfn>entity references</dfn>.
+            <abbr title="Hypertext Markup Language">HTML</abbr> tags most commonly come in pairs
+            like <code>&lth1&gt</code> and <code>&lth2&gt</code>, although some represent <dfn>empty elements</dfn> and
+            so
+            are unpaired, for example <code>&ltimg&gt</code>. The first tag in such
+            a pair is the <dfn>start tag</dfn>, and the second is the <dfn>end tag</dfn> (they are also called
+            <dfn>opening
+                tags</dfn> and <dfn>closing tags</dfn>).
+        </p>
 
-    <p>
-        <abbr title="Hypertext Markup Language">HTML</abbr> markup consists of several key components, including those
-        called <dfn>tags</dfn> (and their <dfn>attributes</dfn>),
-        character-based <dfn>data types</dfn>, <dfn>character references</dfn> and <dfn>entity references</dfn>. <abbr
-            title="Hypertext Markup Language">HTML</abbr> tags most commonly come in pairs
-        like <code>&lth1&gt</code> and <code>&lth2&gt</code>, although some represent <dfn>empty elements</dfn> and so
-        are unpaired, for example <code>&ltimg&gt</code>. The first tag in such
-        a pair is the <dfn>start tag</dfn>, and the second is the <dfn>end tag</dfn> (they are also called <dfn>opening
-            tags</dfn> and <dfn>closing tags</dfn>).
-    </p>
+        <p>
+            Another important component is the <abbr title="Hypertext Markup Language">HTML</abbr> <dfn>document type
+                declaration</dfn>, which triggers standards mode rendering.</p>
 
-    <p>
-        Another important component is the <abbr title="Hypertext Markup Language">HTML</abbr> <dfn>document type
-        declaration</dfn>, which triggers standards mode rendering.</p>
+        <p>
+            The following is an example of the classic "Hello, World!" program:
+        </p>
 
-    <p>
-        The following is an example of the classic "Hello, World!" program:
-    </p>
+        <div>
+            <code>
+                <pre>
+                &lt!DOCTYPE html&gt 
+                &lthtml&gt 
+                    &lthead&gt 
+                        &lttitle&gt<span>This is a title</span>&lt/title&gt 
+                    &lt/head&gt 
+                    &ltbody&gt 
+                        &ltp><span>Hello world!</span>&lt/p&gt 
+                    &lt/body&gt 
+                &lt/html&gt 
+                </pre>
+            </code>
+        </div>
+    </main>
 
-    <div>
-        <code>
-            <pre>
-            &lt!DOCTYPE html&gt 
-            &lthtml&gt 
-                &lthead&gt 
-                    &lttitle&gt<span>This is a title</span>&lt/title&gt 
-                &lt/head&gt 
-                &ltbody&gt 
-                    &ltp><span>Hello world!</span>&lt/p&gt 
-                &lt/body&gt 
-            &lt/html&gt 
-            </pre>
-        </code>
-    </div>
-
-
-
-
-
-    
+    <footer>
+        <hr>
+        <ul>
+            <li><b>Tags:</b></li>
+            <li>CodingScripting</li>
+            <li>head</li>
+            <li>HTML</li>
+            <li>Introduction to HTML</li>
+            <li>Landing</li>
+            <li>Links semantics</li>
+            <li>Structure</li>
+            <li>Text</li>
+        </ul>
+    </footer>
 
 
-    <hr>
 
-
-    <p>Tags: CodingScripting head HTML Introduction to HTML Landing Links semantics Structure Text</p>
 
 </body>
 
